# LibertyFork

./: .gitignore  CMakeLists.txt  Makefile  README  attacker.c  connections.db  connections.h  defender.c  genmove.c  gmp.c  gnugo.c  gtp.c  gtp.h  hacks.c  interface.h  jni_bridge.c  liberty.h  main.c  matchpat.c  mkpat.c  newlib.h  newstring.c  opening.c  patterns.db  patterns.h  play_gtp.c  sethand.c  shapes.c  showbord.c
